--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  device_info: ^2.0.2
+  device_info_plus: ^2.1.0
+  package_info_plus: ^1.0.6
 
 dev_dependencies:
   flutter_test:
